some interesting indeas

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,14 @@
 [package]
-name = "cgogen"
+name = "cgen"
 version = "0.1.0"
 authors = ["chris.henderson <chris.henderson@alation.com>"]
 edition = "2018"
 
-
-#[lib]
-#proc-macro = true
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+crate-type = ["staticlib"]
 
 [dependencies]
-#syn = {version = "1.0.14", features = ["derive", "extra-traits", "visit", "visit-mut", "clone-impls", "full"]}
-#quote = "1.0.2"
-#proc-macro2 = "1.0.8"
+libc = "0.2.66"
 
 [dev-dependencies]
 lazy_static = "*"
